fixed properties for test